--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6d0b3450-d1f3-4fa8-8c19-c7c58c9378e5"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
