--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^14.0.4",
     "@angular/platform-browser-dynamic": "^14.0.4",
     "@angular/router": "^14.0.4",
+    "@cloudinary/angular-5.x": "^1.5.3",
     "bootstrap": "^5.1.3",
+    "ng2-file-upload": "^1.4.0",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
