--- a/package.json
+++ b/package.json
@@ -10,15 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.4",
-    "@angular/common": "^14.0.4",
-    "@angular/compiler": "^14.0.4",
-    "@angular/core": "^14.0.4",
-    "@angular/forms": "^14.0.4",
-    "@angular/platform-browser": "^14.0.4",
-    "@angular/platform-browser-dynamic": "^14.0.4",
-    "@angular/router": "^14.0.4",
-    "@cloudinary/angular-5.x": "^1.5.3",
     "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
@@ -27,9 +18,19 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@cloudinary/angular-5.x": "^1.5.3",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ngx-loading-bar/core": "^6.0.2",
+    "@ngx-progressbar/core": "^3.0.2",
+    "@ngx-progressbar/http-client": "^3.0.2",
+    "@popperjs/core": "^2.11.5",
+    "angular-svg-round-progressbar": "^9.0.0",
     "flat-icons": "^1.0.0",
     "jquery": "^3.6.0",
+    "ngx-progressbar": "^9.0.0",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "wildcard": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -39,19 +40,18 @@
     "@angular/cli": "~14.0.4",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "bootstrap": "^5.1.3",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2",
-    "bootstrap": "^5.1.3",
     "ng2-file-upload": "^1.4.0",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
     "zone.js": "~0.11.4"
-
   }
 }
