--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "medistore-frontend",
   "version": "0.0.0",
+  "engines": {
+    "node": "^6.14.17",
+    "npm": "^14.20.0"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -11,8 +15,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cli": "~14.0.4",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
@@ -25,13 +31,16 @@
     "@ngx-progressbar/http-client": "^3.0.2",
     "@popperjs/core": "^2.11.5",
     "angular-svg-round-progressbar": "^9.0.0",
+    "express": "^4.18.1",
     "flat-icons": "^1.0.0",
     "jquery": "^3.6.0",
     "ngx-progressbar": "^9.0.0",
     "ngx-spinner": "^14.0.0",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
     "wildcard": "^2.0.0",
     "zone.js": "~0.11.4"
   },
